--- a/honor.html
+++ b/honor.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Avenue | Premium Mobile Shop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="smartphones.css">
 </head>
 
 <body class="body">
-    <!-- FUTURE NAVIGATION BAR: Place the navigation bar code here (e.g., <nav>...) -->
+    <!--NAVIGATION BAR -->
 
     <header id="main-header">
         <h1>TECH AVENUE</h1>
@@ -18,7 +18,7 @@
     <main id="content">
         <h2 class="tagline">SMARTPHONES FOR A SMART LIFE</h2>
 
-        <!-- HONOR BRAND SECTION -->
+        <!-- HONOR BRAND  -->
         <section id="honour-section" class="brand">
             <h2 class="title">HONOR</h2>
             <ul class="grid">
@@ -91,13 +91,13 @@
         </section>
     </main>
 
-    <!--FOOTER should come here
+    <!--FOOTER
     <footer>
 
     </footer> -->
 
 
-    <script src="script.js"></script>
+    <script src="smartphones.js"></script>
 </body>
 
 </html>
