--- a/huawei.html
+++ b/huawei.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Avenue | Premium Mobile Shop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="smartphones.css">
 </head>
 
 <body class="body">
-    <!-- FUTURE NAVIGATION BAR: Place the navigation bar code here (e.g., <nav>...) -->
+    <!--NAVIGATION BAR-->
 
     <header id="main-header">
         <h1>TECH AVENUE</h1>
@@ -18,7 +18,7 @@
     <main id="content">
         <h2 class="tagline">SMARTPHONES FOR A SMART LIFE</h2>
 
-        <!-- huawei BRAND SECTION -->
+        <!-- huawei BRAND -->
         <section id="huawei-section" class="brand">
             <h2 class="title">HUAWEI</h2>
             <ul class="grid">
@@ -83,13 +83,13 @@
         </section>
     </main>
 
-    <!--FOOTER should come here
+    <!--FOOTER
     <footer>
 
     </footer> -->
 
 
-    <script src="script.js"></script>
+    <script src="smartphones.js"></script>
 </body>
 
 </html>
