--- a/samsung.html
+++ b/samsung.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Avenue | Premium Mobile Shop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="smartphones.css">
 </head>
 
 <body class="body">
@@ -107,7 +107,7 @@
     </footer> -->
 
 
-    <script src="script.js"></script>
+    <script src="smartphones.js"></script>
 </body>
 
 </html>
