--- a/samsung.html
+++ b/samsung.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="body">
-    <!-- FUTURE NAVIGATION BAR: Place the navigation bar code here (e.g., <nav>...) -->
+    <!-- NAVIGATION BAR-->
 
     <header id="main-header">
         <h1>TECH AVENUE</h1>
@@ -18,7 +18,7 @@
     <main id="content">
         <h2 class="tagline">SMARTPHONES FOR A SMART LIFE</h2>
 
-        <!-- SAMSUNG BRAND SECTION -->
+        <!-- SAMSUNG BRAND-->
         <section id="samsung-section" class="brand">
             <h2 class="title">SAMSUNG</h2>
             <ul class="grid">
@@ -101,7 +101,7 @@
         </section>
     </main>
 
-    <!--FOOTER should come here
+    <!--
     <footer>
 
     </footer> -->
