samsung and huawei desc updated

--- a/honor.html
+++ b/honor.html
@@ -26,65 +26,64 @@
                     <img src="images/img-21.png" alt="Honor X7D" class="img">
                     <h3>Honor X7D (8/256GB)</h3>
                     <p class="price">LKR 65,800.00</p>
-                    <p class="desc">The Honor X7D redefines elegance with a curved OLED display and a
-                        revolutionary
-                        quad-camera system.</p>
+                    <p class="desc">8GB ram and Snapdragon 6s Gen 3<br>50MP main & 5MP front camera
+                        <br>Android 15 with Magic OS 9<br>6500mAh battery 35W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-22.png" alt="Honor Magic7 Pro" class="img">
                     <h3>Honor Magic7 Pro (12/512GB)</h3>
                     <p class="price">LKR 378,000.00</p>
-                    <p class="desc">A sleek and powerful device featuring a vibrant display and lightning-fast
-                        charging capabilities.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 50MP front camera
+                        <br>Android 15 with Magic OS 9<br>5850mAh battery 100W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-23.png" alt="Honor 400 Pro" class="img">
                     <h3>Honor 400 Pro (12/256GB)</h3>
                     <p class="price">LKR 179,000.00</p>
-                    <p class="desc">Professional-grade photography meets a premium design with the sleek and
-                        powerful Honor 400 Pro.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Gen 3<br>200MP main & 50MP front camera
+                        <br>Android 15 with Magic OS 9<br>5300mAh battery 50W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-24.png" alt="Honor 400 5G" class="img">
                     <h3>Honor 400 5G (12/256GB)</h3>
                     <p class="price">LKR 146,700.00</p>
-                    <p class="desc">Experience blazing-fast 5G speeds and a smooth gaming experience with the
-                        Honor 400 5G.</p>
+                    <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>200MP main & 50MP front camera
+                        <br>Android 15 with Magic OS 9<br>5300mAh battery 66W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-25.png" alt="Honor 400" class="img">
                     <h3>Honor 400 (12/256GB)</h3>
                     <p class="price">LKR 134,900.00</p>
-                    <p class="desc">The Honor 400 offers impressive versatility with its high-resolution display
-                        and long-lasting battery.</p>
+                    <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>200MP main & 50MP front camera
+                        <br>Android 15 with Magic OS 9<br>5300mAh battery 66W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-26.png" alt="Honor 400 Lite" class="img">
                     <h3>Honor 400 Lite (12/256GB)</h3>
                     <p class="price">LKR 99,000.00</p>
-                    <p class="desc">Lightweight and stylish, the Honor 400 Lite is designed for performance and
-                        portability on the go.</p>
+                    <p class="desc">12GB ram and Dimensity 7025 Ultra<br>108MP main & 16MP front camera
+                        <br>Android 15 with Magic OS 9<br>5230mAh battery 35W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-27.png" alt="Honor 200 5G" class="img">
                     <h3>Honor 200 5G (12/512GB)</h3>
                     <p class="price">LKR 147,000.00</p>
-                    <p class="desc">A balanced 5G smartphone with a focus on photography and a smooth, immersive
-                        user experience.</p>
+                    <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>50MP main & 50MP front camera
+                        <br>Android 14 with Magic OS 8<br>5200mAh battery 100W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-28.png" alt="Honor 200 Smart" class="img">
                     <h3>Honor 200 Smart (8/256GB)</h3>
                     <p class="price">LKR 65,800.00</p>
-                    <p class="desc">Smart, reliable, and equipped with all the essentials for a connected
-                        lifestyle at an unbeatable price.</p>
+                    <p class="desc">8GB ram and Snapdragon 4 Gen 2<br>50MP main & 5MP front camera
+                        <br>Android 14 with Magic OS 8<br>5200mAh battery 35W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
             </ul>
