--- a/huawei.html
+++ b/huawei.html
@@ -26,57 +26,64 @@
                     <img src="images/img-29.png" alt="Huawei Mate 80 RS Ultimate Design" class="img">
                     <h3>Huawei Mate 80 RS Ultimate Design(12/512GB)</h3>
                     <p class="price">LKR 520,000.00</p>
-                    <p class="desc">Ultra-premium build with high-end materials and flagship specs.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-30.png" alt="Huawei Mate 80 Pro Max" class="img">
                     <h3>Huawei Mate 80 Pro Max(16/512GB)</h3>
                     <p class="price">LKR 580,000.00</p>
-                    <p class="desc">Top-tier Mate variant with peak performance and premium features.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-31.png" alt="Huawei Mate 80 Pro" class="img">
                     <h3>Huawei Mate 80 Pro(12/512GB)</h3>
                     <p class="price">LKR 450,000.00</p>
-                    <p class="desc">Enhanced Mate 80 with better performance and advanced camera system.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-32.png" alt="Huawei Mate 80" class="img">
                     <h3>Huawei Mate 80(12/256GB)</h3>
                     <p class="price">LKR 290,000.00</p>
-                    <p class="desc">Flagship series base model with large OLED display, 5G, strong battery and cameras; part of the current Mate line</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-33.png" alt="Huawei Mate X7" class="img">
                     <h3>Huawei Mate X7 (16/512GB)</h3>
                     <p class="price">LKR 560,000.00</p>
-                    <p class="desc">Foldable flagship with large inner display and high-performance chipset.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-34.png" alt="Huawei Nova 15 Pro" class="img">
                     <h3>Huawei Nova 15 Pro(8/256GB)</h3>
                     <p class="price">LKR 155,000.00</p>
-                    <p class="desc">Pro variant of the Nova 15 series with enhanced specs.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-35.png" alt="Huawei Nova 15 Ultra" class="img">
                     <h3>Huawei Nova 15 Ultra(12/512GB)</h3>
                     <p class="price">LKR 210,000.00</p>
-                    <p class="desc">Premium mid-range focused on strong camera performance and large battery.
-                    </p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-36.png" alt="Huawei Nova 15" class="img">
                     <h3>Huawei Nova 15(8/256GB)</h3>
                     <p class="price">LKR 140,000.00</p>
-                    <p class="desc">New Nova lineup for late 2025 with balanced specs and battery.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
             </ul>
