--- a/samsung.html
+++ b/samsung.html
@@ -26,75 +26,80 @@
                     <img src="images/img-1.png" alt="Samsung Galaxy S25 Ultra" class="img">
                     <h3>Samsung Galaxy S25 Ultra (12/512GB)</h3>
                     <p class="price">LKR 431,490.00</p>
-                    <p class="desc">Experience the peak of performance with the S25 Ultra, featuring a stunning
-                        display and advanced AI features.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 8<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-2.png" alt="Samsung Galaxy S25+" class="img">
                     <h3>Samsung Galaxy S25+ (12/256GB)</h3>
                     <p class="price">LKR 365,000.00</p>
-                    <p class="desc">The Galaxy S25+ offers a perfect balance of size and power, with a
-                        long-lasting battery and high-res camera.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>50MP main & 12MP front camera
+                        <br>Android 15 with one UI 8<br>4900mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-3.png" alt="Samsung Galaxy S25" class="img">
                     <h3>Samsung Galaxy S25 (12/256GB)</h3>
                     <p class="price">LKR 262,000.00</p>
-                    <p class="desc">Compact yet powerful, the Galaxy S25 brings flagship features in a
-                        pocket-friendly design.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>50MP main & 12MP front camera
+                        <br>Android 15 with one UI 8<br>4000mAh battery 25W wired  charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-4.png" alt="Samsung Galaxy A56 5G" class="img">
                     <h3>Samsung Galaxy A56 5G (12/256GB)</h3>
                     <p class="price">LKR 172,000.00</p>
-                    <p class="desc">A solid 5G mid-ranger with a smooth display and great value for money.</p>
+                    <p class="desc">12GB ram and Exynos 1580<br>50MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-5.png" alt="Samsung Galaxy A56" class="img">
                     <h3>Samsung Galaxy A56 (8/128GB)</h3>
                     <p class="price">LKR 99,000.00</p>
-                    <p class="desc">The A56 provides reliable performance and a multi-lens camera for everyday
-                        photography.</p>
+                    <p class="desc">8GB ram and Snapdragon Exynos 1580<br>50MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-6.png" alt="Samsung Galaxy A36 5G" class="img">
                     <h3>Samsung Galaxy A36 5G (12/256GB)</h3>
                     <p class="price">LKR 129,000.00</p>
-                    <p class="desc">Affordable 5G power with a sharp screen and modern design.</p>
+                    <p class="desc">12GB ram and Snapdragon 6 Gen 3<br>50MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-7.png" alt="Samsung Galaxy A26 5G" class="img">
                     <h3>Samsung Galaxy A26 5G (8/128GB)</h3>
                     <p class="price">LKR 84,000.00</p>
-                    <p class="desc">Essential 5G connectivity and all-day battery life for the budget-conscious.
-                    </p>
+                    <p class="desc">8GB ram and Exynos 1380<br>50MP main & 13MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 25W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-8.png" alt="Samsung Galaxy M36 5G" class="img">
                     <h3>Samsung Galaxy M36 5G (6/128GB)</h3>
                     <p class="price">LKR 59,000.00</p>
-                    <p class="desc">A robust M-series phone with a massive battery for non-stop usage.</p>
+                    <p class="desc">6GB ram and Exynos 1380<br>50MP main & 13MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 25W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-9.png" alt="Samsung Galaxy S25 FE" class="img">
                     <h3>Samsung Galaxy S25 FE (8/256GB)</h3>
                     <p class="price">LKR 230,000.00</p>
-                    <p class="desc">Fan Edition greatness with flagship features at a more accessible price.</p>
+                    <p class="desc">8GB ram and Exynos 2400<br>500MP main & 12MP front camera
+                        <br>Android 16 with one UI 8<br>4900mAh battery 45W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-10.png" alt="Samsung Galaxy A06 5G" class="img">
                     <h3>Samsung Galaxy A06 (6/128GB)</h3>
                     <p class="price">LKR 46,000.00</p>
-                    <p class="desc">Practical 5G for everyone, featuring a simple and clean design.</p>
+                    <p class="desc">6GB ram and Helio G85<br>50MP main & 12MP front camera
+                        <br>Android 15 with one UI 8<br>5000mAh battery 25W wired charging</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
             </ul>
