--- a/apple.html
+++ b/apple.html
@@ -26,77 +26,80 @@
                     <img src="images/img-11.png" alt="iPhone 17 Pro Max" class="img">
                     <h3>iPhone 17 Pro Max (512GB)</h3>
                     <p class="price">LKR 530,000.00</p>
-                    <p class="desc">The ultimate iPhone with a massive titanium build and pro-level cameras.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-12.png" alt="iPhone 17 Pro" class="img">
                     <h3>iPhone 17 Pro (256GB)</h3>
                     <p class="price">LKR 379,000.00</p>
-                    <p class="desc">Pro performance in a slightly smaller size, featuring the same incredible
-                        camera system as the Max.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-13.png" alt="iPhone 17 Air" class="img">
                     <h3>iPhone Air (256GB)</h3>
                     <p class="price">LKR 320,000.00</p>
-                    <p class="desc">The all-new thin and light iPhone 17 Air, prioritizing portability and style
-                        without sacrificing power.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-14.png" alt="iPhone 17" class="img">
                     <h3>iPhone 17 (256GB)</h3>
                     <p class="price">LKR 290,000</p>
-                    <p class="desc">The standard-bearer for smartphones, powerful, versatile, and beautifully
-                        designed.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-15.png" alt="iPhone 16 Pro Max" class="img">
                     <h3>iPhone 16 Pro Max (512GB)</h3>
                     <p class="price">LKR 430,000.00</p>
-                    <p class="desc">The current gold standard, with a massive display and industry-leading
-                        performance.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-16.png" alt="iPhone 16 Pro" class="img">
                     <h3>iPhone 16 Pro (256GB)</h3>
                     <p class="price">LKR 370,000.00</p>
-                    <p class="desc">Compact pro power with an advanced camera system and high-refresh display.
-                    </p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-17.png" alt="iPhone 16 Plus" class="img">
                     <h3>iPhone 16 Plus (128GB)</h3>
                     <p class="price">LKR 249,500.00</p>
-                    <p class="desc">A larger iPhone 16 centered around value and battery longevity.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-18.png" alt="iPhone 16" class="img">
                     <h3>iPhone 16 (256GB)</h3>
                     <p class="price">LKR 245,000.00</p>
-                    <p class="desc">The core iPhone experience, with advanced performance and cameras in a
-                        familiar design.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-19.png" alt="iPhone 16e" class="img">
                     <h3>iPhone 16e (128GB)</h3>
                     <p class="price">LKR 174,000.00</p>
-                    <p class="desc">The most affordable entry point into the new iPhone generation.</p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
                 <li class="card">
                     <img src="images/img-20.png" alt="iPhone 15 Pro Max" class="img">
                     <h3>iPhone 15 Pro Max (256GB)</h3>
                     <p class="price">LKR 350,000</p>
-                    <p class="desc">Sleek and professional with the A17 Pro chip and a versatile triple camera.
-                    </p>
+                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
                     <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
                 </li>
             </ul>
