nav bar and footer added

--- a/honor.html
+++ b/honor.html
@@ -2,101 +2,203 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Avenue | Premium Mobile Shop</title>
-    <link rel="stylesheet" href="smartphones.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Avenue | Premium Mobile Shop</title>
+  <link rel="stylesheet" href="smartphones.css">
 </head>
 
 <body class="body">
-    <!--NAVIGATION BAR -->
+  <nav class="navbar">
+    <div class="logo">
+      <img src="images/logo.png" alt="logo">
+    </div>
 
-    <header id="main-header">
-        <h1>TECH AVENUE</h1>
-    </header>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
 
-    <main id="content">
-        <h2 class="tagline">SMARTPHONES FOR A SMART LIFE</h2>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Mobile Phones ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Apple</a></li>
+          <li><a href="#">Samsung</a></li>
+          <li><a href="#">Huawei</a></li>
+          <li><a href="#">Honor</a></li>
+        </ul>
+      </li>
 
-        <!-- HONOR BRAND  -->
-        <section id="honour-section" class="brand">
-            <h2 class="title">HONOR</h2>
-            <ul class="grid">
-                <li class="card">
-                    <img src="images/img-21.png" alt="Honor X7D" class="img">
-                    <h3>Honor X7D (8/256GB)</h3>
-                    <p class="price">LKR 65,800.00</p>
-                    <p class="desc">8GB ram and Snapdragon 6s Gen 3<br>50MP main & 5MP front camera
-                        <br>Android 15 with Magic OS 9<br>6500mAh battery 35W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-22.png" alt="Honor Magic7 Pro" class="img">
-                    <h3>Honor Magic7 Pro (12/512GB)</h3>
-                    <p class="price">LKR 378,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 50MP front camera
-                        <br>Android 15 with Magic OS 9<br>5850mAh battery 100W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-23.png" alt="Honor 400 Pro" class="img">
-                    <h3>Honor 400 Pro (12/256GB)</h3>
-                    <p class="price">LKR 179,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Gen 3<br>200MP main & 50MP front camera
-                        <br>Android 15 with Magic OS 9<br>5300mAh battery 50W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-24.png" alt="Honor 400 5G" class="img">
-                    <h3>Honor 400 5G (12/256GB)</h3>
-                    <p class="price">LKR 146,700.00</p>
-                    <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>200MP main & 50MP front camera
-                        <br>Android 15 with Magic OS 9<br>5300mAh battery 66W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-25.png" alt="Honor 400" class="img">
-                    <h3>Honor 400 (12/256GB)</h3>
-                    <p class="price">LKR 134,900.00</p>
-                    <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>200MP main & 50MP front camera
-                        <br>Android 15 with Magic OS 9<br>5300mAh battery 66W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-26.png" alt="Honor 400 Lite" class="img">
-                    <h3>Honor 400 Lite (12/256GB)</h3>
-                    <p class="price">LKR 99,000.00</p>
-                    <p class="desc">12GB ram and Dimensity 7025 Ultra<br>108MP main & 16MP front camera
-                        <br>Android 15 with Magic OS 9<br>5230mAh battery 35W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-27.png" alt="Honor 200 5G" class="img">
-                    <h3>Honor 200 5G (12/512GB)</h3>
-                    <p class="price">LKR 147,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>50MP main & 50MP front camera
-                        <br>Android 14 with Magic OS 8<br>5200mAh battery 100W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-28.png" alt="Honor 200 Smart" class="img">
-                    <h3>Honor 200 Smart (8/256GB)</h3>
-                    <p class="price">LKR 65,800.00</p>
-                    <p class="desc">8GB ram and Snapdragon 4 Gen 2<br>50MP main & 5MP front camera
-                        <br>Android 14 with Magic OS 8<br>5200mAh battery 35W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-            </ul>
-        </section>
-    </main>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Laptops ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="apple.html" target="_blank">Apple</a></li>
+          <li><a href="samsung.html" target="_blank">Samsung</a></li>
+          <li><a href="huawei.html" target="_blank">Huawei</a></li>
+          <li><a href="honor.html" target="_blank">Honor</a></li>
+        </ul>
+      </li>
 
-    <!--FOOTER
-    <footer>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Accessories ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Phone Chargers</a></li>
+          <li><a href="#">Powerbanks</a></li>
+          <li><a href="#">Headphone & Airpods</a></li>
+          <li><a href="#">Others</a></li>
+        </ul>
+      </li>
 
-    </footer> -->
+      <li><a href="#">Smart Watch</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+  </nav>
+
+  <main id="content">
+    <h2 class="tagline">SMARTPHONES FOR A SMART LIFE</h2>
+
+    <!-- HONOR BRAND  -->
+    <section id="honour-section" class="brand">
+      <h2 class="title">HONOR</h2>
+      <ul class="grid">
+        <li class="card">
+          <img src="images/img-21.png" alt="Honor X7D" class="img">
+          <h3>Honor X7D (8/256GB)</h3>
+          <p class="price">LKR 65,800.00</p>
+          <p class="desc">8GB ram and Snapdragon 6s Gen 3<br>50MP main & 5MP front camera
+            <br>Android 15 with Magic OS 9<br>6500mAh battery 35W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-22.png" alt="Honor Magic7 Pro" class="img">
+          <h3>Honor Magic7 Pro (12/512GB)</h3>
+          <p class="price">LKR 378,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 50MP front camera
+            <br>Android 15 with Magic OS 9<br>5850mAh battery 100W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-23.png" alt="Honor 400 Pro" class="img">
+          <h3>Honor 400 Pro (12/256GB)</h3>
+          <p class="price">LKR 179,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Gen 3<br>200MP main & 50MP front camera
+            <br>Android 15 with Magic OS 9<br>5300mAh battery 50W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-24.png" alt="Honor 400 5G" class="img">
+          <h3>Honor 400 5G (12/256GB)</h3>
+          <p class="price">LKR 146,700.00</p>
+          <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>200MP main & 50MP front camera
+            <br>Android 15 with Magic OS 9<br>5300mAh battery 66W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-25.png" alt="Honor 400" class="img">
+          <h3>Honor 400 (12/256GB)</h3>
+          <p class="price">LKR 134,900.00</p>
+          <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>200MP main & 50MP front camera
+            <br>Android 15 with Magic OS 9<br>5300mAh battery 66W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-26.png" alt="Honor 400 Lite" class="img">
+          <h3>Honor 400 Lite (12/256GB)</h3>
+          <p class="price">LKR 99,000.00</p>
+          <p class="desc">12GB ram and Dimensity 7025 Ultra<br>108MP main & 16MP front camera
+            <br>Android 15 with Magic OS 9<br>5230mAh battery 35W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-27.png" alt="Honor 200 5G" class="img">
+          <h3>Honor 200 5G (12/512GB)</h3>
+          <p class="price">LKR 147,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 7 Gen 3<br>50MP main & 50MP front camera
+            <br>Android 14 with Magic OS 8<br>5200mAh battery 100W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-28.png" alt="Honor 200 Smart" class="img">
+          <h3>Honor 200 Smart (8/256GB)</h3>
+          <p class="price">LKR 65,800.00</p>
+          <p class="desc">8GB ram and Snapdragon 4 Gen 2<br>50MP main & 5MP front camera
+            <br>Android 14 with Magic OS 8<br>5200mAh battery 35W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="footer" id="footer">
+    <div class="footer-brand">
+      <h2>Tech Avenue</h2>
+      <p>Your one-stop shop for smartphones & accessories</p>
+    </div>
+
+    <div class="container">
+      <div class="footer-section">
+        <h3>Products</h3>
+        <ul>
+          <li><a href="#">Mobile Phones</a></li>
+          <li><a href="#">Laptops</a></li>
+          <li><a href="#">Smart Watches</a></li>
+          <li><a href="#">Accessories</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Customer Support</h3>
+        <ul>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Warranty & Repairs</a></li>
+          <li><a href="#">Order Tracking</a></li>
+          <li><a href="#">Return Policy</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Contact Us</h3>
+        <ul>
+          <li>
+            <a href="mailto:support@techavenue.com">support@techavenue.com</a>
+          </li>
+          <li><a href="tel:+94738756343">+94 738 756 343</a></li>
+          <li><a href="#">Find a Store</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Follow Us</h3>
+        <ul>
+          <li>
+            <img src="images/facebook-svgrepo-com (2).svg" alt="svg-1" class="svg-1" /><a href="#">Facebook</a>
+          </li>
+          <li>
+            <img src="images/instagram-svgrepo-com (1).svg" alt="svg-1" class="svg-1" /><a href="#">Instagram</a>
+          </li>
+          <li>
+            <img src="images/tiktok-svgrepo-com.svg" alt="svg-1" class="svg-1" /><a href="#">TikTok</a>
+          </li>
+          <li>
+            <img src="images/youtube-you-tube-video-svgrepo-com.svg" alt="svg-1" class="svg-1" /><a href="#">YouTube</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>&copy; 2026 Tech Avenue. All rights reserved.</p>
+    </div>
+  </footer>
 
 
-    <script src="smartphones.js"></script>
+  <script src="smartphones.js"></script>
 </body>
 
 </html>
