--- a/huawei.html
+++ b/huawei.html
@@ -2,101 +2,203 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Avenue | Premium Mobile Shop</title>
-    <link rel="stylesheet" href="smartphones.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Avenue | Premium Mobile Shop</title>
+  <link rel="stylesheet" href="smartphones.css">
 </head>
 
 <body class="body">
-    <!--NAVIGATION BAR-->
+  <nav class="navbar">
+    <div class="logo">
+      <img src="images/logo.png" alt="logo">
+    </div>
 
-    <header id="main-header">
-        <h1>TECH AVENUE</h1>
-    </header>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
 
-    <main id="content">
-        <h2 class="tagline">SMARTPHONES FOR A SMART LIFE</h2>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Mobile Phones ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Apple</a></li>
+          <li><a href="#">Samsung</a></li>
+          <li><a href="#">Huawei</a></li>
+          <li><a href="#">Honor</a></li>
+        </ul>
+      </li>
 
-        <!-- huawei BRAND -->
-        <section id="huawei-section" class="brand">
-            <h2 class="title">HUAWEI</h2>
-            <ul class="grid">
-                <li class="card">
-                    <img src="images/img-29.png" alt="Huawei Mate 80 RS Ultimate Design" class="img">
-                    <h3>Huawei Mate 80 RS Ultimate Design(12/512GB)</h3>
-                    <p class="price">LKR 520,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-30.png" alt="Huawei Mate 80 Pro Max" class="img">
-                    <h3>Huawei Mate 80 Pro Max(16/512GB)</h3>
-                    <p class="price">LKR 580,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-31.png" alt="Huawei Mate 80 Pro" class="img">
-                    <h3>Huawei Mate 80 Pro(12/512GB)</h3>
-                    <p class="price">LKR 450,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-32.png" alt="Huawei Mate 80" class="img">
-                    <h3>Huawei Mate 80(12/256GB)</h3>
-                    <p class="price">LKR 290,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-33.png" alt="Huawei Mate X7" class="img">
-                    <h3>Huawei Mate X7 (16/512GB)</h3>
-                    <p class="price">LKR 560,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-34.png" alt="Huawei Nova 15 Pro" class="img">
-                    <h3>Huawei Nova 15 Pro(8/256GB)</h3>
-                    <p class="price">LKR 155,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-35.png" alt="Huawei Nova 15 Ultra" class="img">
-                    <h3>Huawei Nova 15 Ultra(12/512GB)</h3>
-                    <p class="price">LKR 210,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-                <li class="card">
-                    <img src="images/img-36.png" alt="Huawei Nova 15" class="img">
-                    <h3>Huawei Nova 15(8/256GB)</h3>
-                    <p class="price">LKR 140,000.00</p>
-                    <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-                        <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless</p>
-                    <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
-                </li>
-            </ul>
-        </section>
-    </main>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Laptops ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Mac</a></li>
+          <li><a href="#">Asus</a></li>
+          <li><a href="#">Acer</a></li>
+          <li><a href="#">HP</a></li>
+        </ul>
+      </li>
 
-    <!--FOOTER
-    <footer>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Accessories ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="apple.html" target="_blank">Apple</a></li>
+          <li><a href="samsung.html" target="_blank">Samsung</a></li>
+          <li><a href="huawei.html" target="_blank">Huawei</a></li>
+          <li><a href="honor.html" target="_blank">Honor</a></li>
+        </ul>
+      </li>
 
-    </footer> -->
+      <li><a href="#">Smart Watch</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+  </nav>
+
+  <main id="content">
+    <h2 class="tagline">SMARTPHONES FOR A SMART LIFE</h2>
+
+    <!-- huawei BRAND -->
+    <section id="huawei-section" class="brand">
+      <h2 class="title">HUAWEI</h2>
+      <ul class="grid">
+        <li class="card">
+          <img src="images/img-29.png" alt="Huawei Mate 80 RS Ultimate Design" class="img">
+          <h3>Huawei Mate 80 RS Ultimate Design(12/512GB)</h3>
+          <p class="price">LKR 520,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-30.png" alt="Huawei Mate 80 Pro Max" class="img">
+          <h3>Huawei Mate 80 Pro Max(16/512GB)</h3>
+          <p class="price">LKR 580,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-31.png" alt="Huawei Mate 80 Pro" class="img">
+          <h3>Huawei Mate 80 Pro(12/512GB)</h3>
+          <p class="price">LKR 450,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-32.png" alt="Huawei Mate 80" class="img">
+          <h3>Huawei Mate 80(12/256GB)</h3>
+          <p class="price">LKR 290,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-33.png" alt="Huawei Mate X7" class="img">
+          <h3>Huawei Mate X7 (16/512GB)</h3>
+          <p class="price">LKR 560,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-34.png" alt="Huawei Nova 15 Pro" class="img">
+          <h3>Huawei Nova 15 Pro(8/256GB)</h3>
+          <p class="price">LKR 155,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-35.png" alt="Huawei Nova 15 Ultra" class="img">
+          <h3>Huawei Nova 15 Ultra(12/512GB)</h3>
+          <p class="price">LKR 210,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+        <li class="card">
+          <img src="images/img-36.png" alt="Huawei Nova 15" class="img">
+          <h3>Huawei Nova 15(8/256GB)</h3>
+          <p class="price">LKR 140,000.00</p>
+          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
+            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          </p>
+          <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="footer" id="footer">
+    <div class="footer-brand">
+      <h2>Tech Avenue</h2>
+      <p>Your one-stop shop for smartphones & accessories</p>
+    </div>
+
+    <div class="container">
+      <div class="footer-section">
+        <h3>Products</h3>
+        <ul>
+          <li><a href="#">Mobile Phones</a></li>
+          <li><a href="#">Laptops</a></li>
+          <li><a href="#">Smart Watches</a></li>
+          <li><a href="#">Accessories</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Customer Support</h3>
+        <ul>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Warranty & Repairs</a></li>
+          <li><a href="#">Order Tracking</a></li>
+          <li><a href="#">Return Policy</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Contact Us</h3>
+        <ul>
+          <li>
+            <a href="mailto:support@techavenue.com">support@techavenue.com</a>
+          </li>
+          <li><a href="tel:+94738756343">+94 738 756 343</a></li>
+          <li><a href="#">Find a Store</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Follow Us</h3>
+        <ul>
+          <li>
+            <img src="images/facebook-svgrepo-com (2).svg" alt="svg-1" class="svg-1" /><a href="#">Facebook</a>
+          </li>
+          <li>
+            <img src="images/instagram-svgrepo-com (1).svg" alt="svg-1" class="svg-1" /><a href="#">Instagram</a>
+          </li>
+          <li>
+            <img src="images/tiktok-svgrepo-com.svg" alt="svg-1" class="svg-1" /><a href="#">TikTok</a>
+          </li>
+          <li>
+            <img src="images/youtube-you-tube-video-svgrepo-com.svg" alt="svg-1" class="svg-1" /><a href="#">YouTube</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>&copy; 2026 Tech Avenue. All rights reserved.</p>
+    </div>
+  </footer>
 
 
-    <script src="smartphones.js"></script>
+  <script src="smartphones.js"></script>
 </body>
 
 </html>
